fixed a spacing issue

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -188,6 +188,10 @@ body {
   padding-right: 0;
 }
 
+#toastDiv {
+  display: none;
+}
+
 #saveSongToast,
 #plistAddSongToast {
   width: fit-content;
